TSS almost ready
TODO event queue